<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgst3"
    tools:context=".loginpage">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"></android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="101dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="238dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/UserID"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/Password"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-238dp"
        android:ems="10"
        android:hint="User Id"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="139dp"
        android:text="@string/submit"
        android:textSize="18sp" />

    <Button
        android:id="@+id/Registration"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/submit"
        android:layout_marginEnd="24dp"
        android:onClick="fun2"
        android:text="@string/registration"
        android:textSize="18sp" />
</RelativeLayout>